--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ env:
 # This runs every hour
 on:
   schedule:
-    - cron: '0 6 1 * *'
+    - cron: '0 9 * * *'
   # Allows manual workflow run (must in default branch to work)
   workflow_dispatch:
 
